only just finished the workshop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,45 @@
 </head>
 
 <body>
-    <h1>Hello World !</h1>
+
+    <nav>
+        <h1>WORKSHOP</h1>
+        <ul>
+            <li>Home</li>
+            <li>About us</li>
+            <li>Featured posts</li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1>Hello World !!!</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>About us</h2>
+            <p>Lorem ipsum dolor sit amet. Et mollitia cupiditate aut accusamus distinctio quo beatae enim qui tempore
+                fugit eos repudiandae facilis qui deserunt architecto eum quia autem. In galisum repellat et laboriosam
+                aperiam cum voluptas molestiae non galisum sapiente aut officia culpa! Aut debitis sint ut cumque quos
+                eum placeat enim. Quo nostrum repellat quo quis tenetur et internos ullam qui ipsam doloremque ut
+                incidunt nostrum. Eum eligendi debitis ut consequatur dolorem qui amet enim At aperiam error qui nihil
+                iure ea aliquam odit. </p>
+        </section>
+
+        <section>
+            <h2>Featured posts</h2>
+            <div class="bloc-container">
+                <article><h1>Article 1</h1></article>
+                <article><h1>Article 2</h1></article>
+                <article><h1>Article 3</h1></article>
+                <article><h1>Article 4</h1></article>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2022 wilders</p>
+    </footer>
 </body>
 
 </html>
